updating styles for sketch

--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -7,9 +7,21 @@ h1 {
   margin: 10px
 }
 
+/*
+ * FOR SKETCH 02 and 03! Re-enable
+#map {
+  margin: 5%
+}
+
+#map svg {
+  width: 49%
+  float:left
+  border: 1px solid #999;
+}
+*/
 
 path {
-  fill: #eaeaea;
+  fill: none;
   stroke: #fff;
   stroke-width: .5px;
   stroke-linejoin: round;
@@ -18,4 +30,8 @@ path {
 path[name='Antarctica'] {
   fill: none;
   stroke: none;
+}
+
+line {
+  stroke-linecap: round
 }
