--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -20,18 +20,41 @@ h1 {
 }
 */
 
-path {
+#map path {
   fill: none;
   stroke: #fff;
   stroke-width: .5px;
   stroke-linejoin: round;
 }
 
-path[name='Antarctica'] {
+#map path[name='Antarctica'] {
   fill: none;
   stroke: none;
 }
 
-line {
+#map line {
   stroke-linecap: round
+}
+
+#map-3 {
+
+  padding: 20px;
+
+  div.graph {
+    float: left;
+
+   .axes {
+      line {
+        stroke: #222
+        stroke-width: 0.5px
+      }
+    }
+
+    .lines {
+      line {
+        stroke: red
+        stroke-width: 1px;
+      }
+    }
+  }
 }
