Added map with circles

--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -36,6 +36,13 @@ h1 {
   stroke-linecap: round
 }
 
+#map {
+  .circles {
+    circle {
+      fill: teal;
+    }
+  }
+}
 #map-3 {
 
   padding: 20px;
