Adding real map with circles

--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -1,3 +1,5 @@
+@import '../../bower_components/mapbox.js/mapbox.standalone.css';
+
 body {
   padding: 0
   margin: 0
@@ -65,3 +67,4 @@ h1 {
     }
   }
 }
+
