--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -9,41 +9,11 @@ h1 {
   margin: 10px
 }
 
-/*
- * FOR SKETCH 02 and 03! Re-enable
-#map {
-  margin: 5%
-}
-
-#map svg {
-  width: 49%
-  float:left
-  border: 1px solid #999;
-}
-*/
-
-#map path {
-  fill: none;
-  stroke: #fff;
-  stroke-width: .5px;
-  stroke-linejoin: round;
-}
-
-#map path[name='Antarctica'] {
-  fill: none;
-  stroke: none;
-}
-
-#map line {
-  stroke-linecap: round
-}
+#map
 
 #map {
+
   .circles {
-    circle {
-      fill: teal;
-    }
-
     circle:hover {
       cursor: pointer;
     }
@@ -57,6 +27,7 @@ h1 {
     margin-left: 60px;
     background-color: white;
     padding: 20px;
+    cursor: default;
   }
 
   .legend {
@@ -75,27 +46,10 @@ h1 {
   a {
     cursor: pointer;
   }
-}
-#map-3 {
 
-  padding: 20px;
-
-  div.graph {
-    float: left;
-
-   .axes {
-      line {
-        stroke: #222
-        stroke-width: 0.5px
-      }
-    }
-
-    .lines {
-      line {
-        stroke: red
-        stroke-width: 1px;
-      }
-    }
+  line {
+    stroke-linecap: round
   }
 }
+
 
