added some GP styles

--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -1,4 +1,5 @@
 @import '../../bower_components/mapbox.js/mapbox.standalone.css';
+@import 'fonts.styl'
 
 body {
   padding: 0
@@ -20,6 +21,16 @@ h1 {
   }
 
   .callout {
+
+    h3 {
+      font-family: 'MuseoSansBold';
+    }
+
+    b {
+      font-family: 'MuseoSansBold';
+    }
+
+    font-family: 'MuseoSans'
     position: absolute;
     z-index: 100;
     width: 300px;
