popup text also GP style

--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -10,8 +10,6 @@ h1 {
   margin: 10px
 }
 
-#map
-
 #map {
 
   .circles {
@@ -22,11 +20,7 @@ h1 {
 
   .callout {
 
-    h3 {
-      font-family: 'MuseoSansBold';
-    }
-
-    b {
+    h3, b {
       font-family: 'MuseoSansBold';
     }
 
@@ -52,6 +46,9 @@ h1 {
 
   .leaflet-popup-pane {
     z-index: 200;
+    h3, b {
+      font-family: 'MuseoSansBold';
+    }
   }
 
   a {
