scaled back markers on region, slowed animation

--- a/app/src/css/region.styl
+++ b/app/src/css/region.styl
@@ -22,8 +22,10 @@
   stroke-width: 1px;
 }
 .camp {
-  fill: #511;
-  cursor: pointer;
+  path {
+    fill: #511;
+    cursor: pointer;
+  }
 }
 .idp {
   fill: #dc5555;
