--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -70,6 +70,26 @@ body {
       text-anchor: middle;
       font-size: 16px;
     }
+
+     g.city {
+      text {
+        fill: #444;
+        font-variant: small-caps;
+      }
+
+      circle {
+        fill: none;
+        stroke: #888;
+        stroke-width: 1.5px;
+        font-size: 16px;
+      }
+    }
+
+    g.capital path {
+      stroke: #dc5555;
+      stroke-width: 2px;
+      fill: none;
+    }
   }
 }
 
