Fixing safari animation issue

--- a/app/src/css/styles.styl
+++ b/app/src/css/styles.styl
@@ -49,6 +49,7 @@ body {
 #map {
   transform: scale(1); /* needed for raster lineup w map overlay. not sure why */
   float:right;
+  position: relative;
 
   svg {
     position: absolute;
