--- a/app/src/css/settling.styl
+++ b/app/src/css/settling.styl
@@ -7,10 +7,16 @@
   }
 
   svg {
-    g.waffle {
-      rect {
-        fill: red;
-      }
-    }
+
   }
+}
+
+g.waffle, .legend {
+  rect {
+    fill: red;
+  }
+}
+
+.tipsy span.val {
+  font-family: MuseoSansMedBold;
 }
