--- a/app/src/css/settling.styl
+++ b/app/src/css/settling.styl
@@ -5,18 +5,27 @@
     margin-left: -7px;
     margin-top: 5px;
   }
-
-  svg {
-
-  }
 }
 
-g.waffle, .legend {
+g.waffle, .legend, .other {
   rect {
     fill: red;
+  }
+
+  rect.outline {
+    fill: none;
+    stroke: black;
+    stroke-width: 2px;
   }
 }
 
 .tipsy span.val {
   font-family: MuseoSansMedBold;
+}
+
+
+.other {
+  position: absolute;
+  bottom: 75px;
+  right: 100px;
 }
