Getting responsive styling to work on region.html

--- a/app/src/css/region.styl
+++ b/app/src/css/region.styl
@@ -1,5 +1,9 @@
 #map {
 
+  width: 670px;
+  transform: scale(1);
+  margin: 0 auto;
+
   img {
     width: 640px;
     margin-left: -7px;
@@ -7,6 +11,10 @@
   }
 
   svg {
+
+    background-size: cover;
+    background-position: -23px -9px;
+
 
     .idp.selected, .camp.selected {
       stroke: #fafafa;
