--- a/app/src/css/settling.styl
+++ b/app/src/css/settling.styl
@@ -1,6 +1,7 @@
 #map {
 
-  width: 686px;
+  width: 670px;
+  margin: 0 auto;
 
   img {
     width: 640px;
@@ -10,12 +11,10 @@
 
   svg {
     background-size: cover;
-    background-position: -19px -5px;
+    background-position: -23px -9px;
   }
 
 }
-
-
 
 g.waffle, .legend, .other {
   rect {
@@ -32,7 +31,6 @@ g.waffle, .legend, .other {
 .tipsy span.val {
   font-family: MuseoSansMedBold;
 }
-
 
 .other {
   position: absolute;
