--- a/app/src/css/fonts.styl
+++ b/app/src/css/fonts.styl
@@ -1,5 +1,10 @@
 
 @font-face {
+  font-family: MuseoSansLight;
+  src: url("fonts/MuseoSans-100.otf") format("opentype");
+}
+
+@font-face {
   font-family: MuseoSans;
   src: url("fonts/MuseoSans-300.otf") format("opentype");
 }
@@ -17,4 +22,36 @@
 @font-face {
   font-family: MuseoSansBold;
   src: url("fonts/MuseoSans_900.otf") format("opentype");
+}
+
+@font-face {
+  font-family: 'icomoon';
+  src:url('fonts/icomoon.eot');
+  src:url('fonts/icomoon.eot') format('embedded-opentype'),
+    url('fonts/icomoon.ttf') format('truetype'),
+    url('fonts/icomoon.woff') format('woff'),
+    url('fonts/icomoon.svg#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-info2:before {
+  content: "\e601";
+}
+.icon-info:before {
+  content: "\e600";
 }
