Inview event triggered from window postMessage events
Also some CSS tweaks to allow for maps to not clip on the sides (mainly
for the region map.)

--- a/app/src/css/region.styl
+++ b/app/src/css/region.styl
@@ -66,3 +66,13 @@
 .tipsy .campname {
   font-family: MuseoSansMedBold;
 }
+
+
+
+@media screen and (min-width: 900px) {
+  #content,
+  .footer {
+    position: absolute;
+    width: 370px;
+  }
+}
